--- a/style.css
+++ b/style.css
@@ -482,4 +482,19 @@ margin: auto;
   .logo, .logo img{
     height: 50px;
   }
+
+  header{
+    width: 100%;
+    height: 600px;
+    background: linear-gradient(to bottom, rgba(211, 20, 100, 0.664),
+    rgba(206, 29, 241, 0.6),
+    rgba(86, 7, 150, 0.45)
+    ), url(img/gatitoFondo2.jpg);
+    background-attachment: fixed;
+    background-position: center;
+    background-size: cover;
+   }
+
 }
+
+/* Responsive de galeria */
